--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: ELF的秘密基地-微博@SuperJunior1106_怦蓝心动打投组
 description: 微博@SuperJunior1106_怦蓝心动打投组，专注SuperJunior打投。感谢大眼仔给我们Github追星新体验。规则不断在变，一切以微博最新更新为准。
 logo: favicon.png
-url: ikongsong.com
+url: plxd1106.github.io
 rss_url: /feed.xml
 
 # Jekyll
